k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: rstudio
  namespace: data-science

spec:
  selector:
    app: rstudio

  ports:
    - port: 80
      targetPort: 8787

  type: ClusterIP
